<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@color/cyan_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/your_email"
                style="@style/TextStyle"
                android:textColor="@color/black_effective"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
            <EditText android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/your_password"
                style="@style/TextStyle"
                android:textColor="@color/black_effective"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/spinnerRole"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:cursorVisible="true"
            android:entries="@array/role_array"
            android:hint="@string/your_password"
            android:maxLength="50"
            android:prompt="@string/roleList"
            android:textColor="@color/black_effective" />

        <!-- Login Button  -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            style="@style/Button.Primary"
            android:text="Login"/>

        <!-- link to Register Button  -->
        <TextView android:id="@+id/createAcct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/register_link"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>